# gnr8

./: Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml  shell.sh  test.py
gnr8/: __init__.py  pywrapper.py
src/: gen.rs  lib.rs  stream.rs
