[package]
name = "gnr8"
version = "0.1.0"
edition = "2021"
authors = ["Nate Nethercott <natenethercott@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gnr8"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
pyo3-tch = "0.15.0" 
torch-sys = "0.15.0"
tch = "0.15"
anyhow = "1.0.86"

